; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/drivers/extr_driver_atheros.c_atheros_set_authmode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/drivers/extr_driver_atheros.c_atheros_set_authmode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WPA_AUTH_ALG_OPEN = common dso_local global i32 0, align 4
@WPA_AUTH_ALG_SHARED = common dso_local global i32 0, align 4
@IEEE80211_AUTH_AUTO = common dso_local global i32 0, align 4
@IEEE80211_AUTH_OPEN = common dso_local global i32 0, align 4
@IEEE80211_AUTH_SHARED = common dso_local global i32 0, align 4
@IEEE80211_PARAM_AUTHMODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @atheros_set_authmode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atheros_set_authmode(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @WPA_AUTH_ALG_OPEN, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @WPA_AUTH_ALG_SHARED, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = load i32, i32* @IEEE80211_AUTH_AUTO, align 4
  store i32 %17, i32* %6, align 4
  br label %35

18:                                               ; preds = %11, %2
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @WPA_AUTH_ALG_OPEN, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %18
  %24 = load i32, i32* @IEEE80211_AUTH_OPEN, align 4
  store i32 %24, i32* %6, align 4
  br label %34

25:                                               ; preds = %18
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* @WPA_AUTH_ALG_SHARED, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %25
  %31 = load i32, i32* @IEEE80211_AUTH_SHARED, align 4
  store i32 %31, i32* %6, align 4
  br label %33

32:                                               ; preds = %25
  store i32 -1, i32* %3, align 4
  br label %40

33:                                               ; preds = %30
  br label %34

34:                                               ; preds = %33, %23
  br label %35

35:                                               ; preds = %34, %16
  %36 = load i8*, i8** %4, align 8
  %37 = load i32, i32* @IEEE80211_PARAM_AUTHMODE, align 4
  %38 = load i32, i32* %6, align 4
  %39 = call i32 @set80211param(i8* %36, i32 %37, i32 %38)
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %35, %32
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @set80211param(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
